--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "commander": "^5.0.0",
     "cross-env": "6.0.3",
     "dotenv": "8.2.0",
