--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "cross-env": "6.0.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "http-errors": "^1.7.3",
+    "http-status-codes": "^1.4.0",
     "minimist": "^1.2.5",
+    "morgan": "^1.10.0",
     "swagger-ui-express": "4.1.2",
     "uuid": "3.3.3",
     "yamljs": "0.3.0"
