--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "http-errors": "^1.7.3",
     "http-status-codes": "^1.4.0",
     "minimist": "^1.2.5",
+    "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
     "swagger-ui-express": "4.1.2",
     "uuid": "3.3.3",
