--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "body-parser": "^1.19.0",
     "commander": "^5.0.0",
     "cross-env": "6.0.3",
-    "dotenv": "8.2.0",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
     "express-winston": "^4.0.3",
     "http-errors": "^1.7.3",
